[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://Fonts/BubblegumSans-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 49
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 49
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 49
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 49
font_data = ExtResource( 2 )

[node name="UI" type="Control"]
anchor_left = -0.003
anchor_right = 1.0
margin_left = 2.24376
margin_right = -0.516235
margin_bottom = 262.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bkgnd" type="ColorRect" parent="."]
anchor_left = 0.002
anchor_right = 0.002
margin_left = 46.154
margin_top = 50.0
margin_right = 546.154
margin_bottom = 250.0
color = Color( 0.192157, 0.192157, 0.192157, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="EnemiesBkgnd" type="ColorRect" parent="Bkgnd"]
margin_left = 10.0
margin_top = 10.0
margin_right = 490.0
margin_bottom = 95.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemies" type="Label" parent="Bkgnd/EnemiesBkgnd"]
margin_top = 12.0
margin_right = 328.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Methane to catch:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemiesCount" type="Label" parent="Bkgnd/EnemiesBkgnd"]
margin_left = 330.0
margin_right = 480.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.145098, 0.145098, 0.145098, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KillsBkgnd" type="ColorRect" parent="Bkgnd"]
margin_left = 10.0
margin_top = 105.0
margin_right = 490.0
margin_bottom = 190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kills" type="Label" parent="Bkgnd/KillsBkgnd"]
margin_top = 12.0
margin_right = 331.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.152941, 0.152941, 0.152941, 1 )
text = "Methane Cought:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KillCount" type="Label" parent="Bkgnd/KillsBkgnd"]
margin_left = 330.0
margin_right = 480.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
